--- a/mole.css
+++ b/mole.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  cursor: url(./cursor.png), default;
+  cursor: url(./img/cursor.png), default;
   background-color: #c0c86d;
   display: flex;
   justify-content: center;
@@ -16,7 +16,7 @@ body {
 }
 
 .bg {
-  background-image: url(./background.png);
+  background-image: url(./img/background.png);
   background-repeat: no-repeat;
   width: 1920px;
   height: 1080px;
@@ -47,7 +47,7 @@ body {
 }
 
 .hungry {
-  cursor: url(./cursor-worm.png), pointer;
+  cursor: url(./img/cursor-worm.png), pointer;
 }
 
 .gone {
@@ -60,7 +60,7 @@ body {
 
 .worm-container {
   overflow: hidden;
-  transition: width 0.5s ease-in-out;
+  transition: width 0.02s ease-in-out;
 }
 
 .worm-box {
